# golangtest

./: BUILD  WORKSPACE  go.mod
libs/a/: BUILD.bazel  a.proto
libs/b/: BUILD.bazel  b.go  b.proto
service1/: BUILD.bazel  main.go
