load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "service1_lib",
    srcs = ["main.go"],
    importpath = "github.com/ramilmsh/golangtest/service1",
    visibility = ["//visibility:private"],
    deps = ["//libs/b"],
)

go_binary(
    name = "service1",
    embed = [":service1_lib"],
    visibility = ["//visibility:public"],
)
