load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "libs_a_proto",
    srcs = ["a.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "libs_a_go_proto",
    importpath = "github.com/ramilmsh/golangtest/libs/a",
    proto = ":libs_a_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "a",
    embed = [":libs_a_go_proto"],
    importpath = "github.com/ramilmsh/golangtest/libs/a",
    visibility = ["//visibility:public"],
)
