load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "libs_b_proto",
    srcs = ["b.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "libs_b_go_proto",
    importpath = "github.com/ramilmsh/golangtest/libs/b",
    proto = ":libs_b_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "b",
    srcs = ["b.go"],
    embed = [":libs_b_go_proto"],
    importpath = "github.com/ramilmsh/golangtest/libs/b",
    visibility = ["//visibility:public"],
    deps = ["//libs/a"],
)
